change api and delete redundant controllers
